--- a/checkout.html
+++ b/checkout.html
@@ -323,13 +323,14 @@
           </ul>
 
           <div class="col-12">
-            <div class="form-check text-dark">
-              <input class="form-check-input" type="checkbox" id="gridCheck" />
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck" required />
               <label class="form-check-label" for="gridCheck">
                 我已閱讀並明瞭<a href="#">「網站使用條款」</a>、<a href="#">「隱私權政策」</a>、<a href="#"
                   >「免責聲明」</a
                 >同意接受該等條款規定，並願遵守網站規範。
               </label>
+              <div class="invalid-feedback">必須勾選</div>
             </div>
           </div>
         </div>
