--- a/products.html
+++ b/products.html
@@ -29,49 +29,69 @@
   <body>
     <div class="preheader">
       <div class="preheader container-fluid bg-secondary d-flex justify-content-end">
-        <div class="dropdown  bg-white">
-          <a href="#" class="py-2 px-4 d-block text-dark dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" role="button" aria-expanded="false">購物車(<span>1</span>)</a>
-          <div class="dropdown-menu p-2" style="min-width: 300px;">
+        <div class="dropdown bg-white">
+          <a
+            href="#"
+            class="py-2 px-4 d-block text-dark dropdown-toggle"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            role="button"
+            aria-expanded="false"
+            >購物車(<span>1</span>)</a
+          >
+          <div class="dropdown-menu p-2" style="min-width: 300px">
             <table class="w-100">
               <tbody class="table">
                 <tr>
-                  <td class="me-2" style="width: 85px;">
-                    <img class="img-fluid"  src="images/shoppingcart-1.webp">
+                  <td class="me-2" style="width: 85px">
+                    <img class="img-fluid" src="images/shoppingcart-1.webp" />
                   </td>
                   <td>
                     <div>春夏薄罩衫 X1</div>
                     <div class="py-0">$890</div>
                   </td>
                   <td class="align-middle">
-                    <a class="text-primary" href="#" data-bs-toggle="modal" data-bs-target="#removeModal"
-                    data-title="春夏薄罩衫"><i class="fas fa-trash"></i></a>
+                    <a
+                      class="text-primary"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#removeModal"
+                      data-title="春夏薄罩衫"
+                      ><i class="fas fa-trash"></i
+                    ></a>
                   </td>
                 </tr>
                 <tr>
-                  <td class="me-2" style="width: 85px;">
-                    <img class="img-fluid"  src="images/products-1.jpg">
+                  <td class="me-2" style="width: 85px">
+                    <img class="img-fluid" src="images/products-1.jpg" />
                   </td>
                   <td>
                     <div>鵝黃碎花花邊衫 X1</div>
                     <div class="py-0">$650</div>
                   </td>
                   <td class="align-middle">
-                    <a class="text-primary" href="#" data-bs-toggle="modal" data-bs-target="#removeModal"
-                    data-title="鵝黃碎花花邊衫"><i class="fas fa-trash"></i></a>
+                    <a
+                      class="text-primary"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#removeModal"
+                      data-title="鵝黃碎花花邊衫"
+                      ><i class="fas fa-trash"></i
+                    ></a>
                   </td>
                 </tr>
               </tbody>
-              <tfoot >
-                <tr class="border-top" style="height: 50px;">
+              <tfoot>
+                <tr class="border-top" style="height: 50px">
                   <td class="ps-2">TOTAL</td>
                   <td colspan="2" class="text-end">$1,540</td>
                 </tr>
               </tfoot>
             </table>
-            
+
             <div class="d-flex mt-3">
               <a href="shoppingcart.html" class="btn btn-primary flex-fill me-1">購物車</a>
-              <a href="checkout.html" class="btn btn-primary flex-fill ms-1" >快速結帳</a>
+              <a href="checkout.html" class="btn btn-primary flex-fill ms-1">快速結帳</a>
             </div>
           </div>
         </div>
@@ -124,7 +144,10 @@
             </div>
           </div>
         </nav>
-        <form class="header-search position-relative position-absolute d-none d-md-block" style="top: 30px; right: 30px">
+        <form
+          class="header-search position-relative position-absolute d-none d-md-block"
+          style="top: 30px; right: 30px"
+        >
           <input class="form-control border-light fw-light" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn position-absolute top-0 end-0 pt-1 pb-0" type="submit">
             <span class="material-icons">search</span>
@@ -134,7 +157,7 @@
     </header>
     <!-- main content start -->
     <div class="container">
-      <div class="row g-5 mb-5">
+      <div class="row mb-5">
         <div class="col-12 py-4">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
