--- a/collections.html
+++ b/collections.html
@@ -154,7 +154,7 @@
       <div class="row">
         <!-- sidebar -->
         <div class="productList-category col-md-3">
-          <ul class="nav flex-column">
+          <ul class="nav flex-column d-none d-md-block">
             <li class="nav-item">
               <a class="nav-link active text-danger" href="#productList-sale" data-bs-toggle="tab">SALE</a>
             </li>
