--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="preheader container-fluid bg-secondary d-flex justify-content-end">
         <div class="dropdown  bg-white">
           <a href="#" class="py-2 px-4 d-block text-dark dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" role="button" aria-expanded="false">購物車(<span>1</span>)</a>
-          <div class="dropdown-menu p-2" style="min-width: 300px;">
+          <div class="dropdown-menu p-2" style="min-width: 280px;">
             <table class="w-100">
               <tbody class="table">
                 <tr>
@@ -458,6 +458,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js' integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==' crossorigin='anonymous'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js' integrity='sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==' crossorigin='anonymous'></script>
     <script src="js/all.js"></script>
   </body>
 </html>
