--- a/checkout.html
+++ b/checkout.html
@@ -334,7 +334,7 @@
           </div>
         </div>
         <div class="col-12 text-center">
-          <a href="index.html" class="btn btn-primary btn-lg px-5 me-3">繼續購物</a>
+          <a href="index.html" class="btn btn-primary btn-lg px-5 me-3" style="text-decoration: none">繼續購物</a>
           <button type="submit" class="btn btn-primary btn-lg px-5">送出訂單</button>
         </div>
       </form>
