--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- main content start -->
     <div class="banner container-lg container-fluid my-2 g-0 overflow-hidden">
       <div class="row g-2">
-        <div class="col-12">
+        <div class="col-12 ">
           <div
             class="card text-light bg-cover border-0"
             style="
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 animated">
           <div class="overflow-hidden">
             <a
               href="#"
@@ -155,7 +155,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 animated">
           <div class="overflow-hidden">
             <a
               href="#"
@@ -176,7 +176,7 @@
       </div>
     </div>
 
-    <div class="main-text container my-7 text-center">
+    <div class="main-text container my-7 text-center animated">
       <h3 class="fw-light h4 mb-3">More simple, More Details</h2>
       <p class="small">
         In 2015, a group of girls with different cultural backgrounds met in New York City. <br>The love of vintage clothes
@@ -185,9 +185,9 @@
       </p>
     </div>
 
-    <div class="productList container">
+    <div class="productList container ">
       <div class="row row-cols-md-2 row-cols-lg-3 g-5">
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body" style="background-image:url(images/clothes1-2.jpg)" >
@@ -201,7 +201,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body" style="background-image:url(images/clothes2-2.jpg)" >
@@ -215,7 +215,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body " style="background-image:url(images/clothes3-2.jpg)" >
@@ -229,7 +229,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body" style="background-image:url(images/clothes4-2.jpg)" >
@@ -243,7 +243,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body" style="background-image:url(images/clothes5-2.jpg)">
@@ -257,7 +257,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col animated">
           <div class="card productCard">
             <a href="#">
               <div class="card-body" style="background-image:url(images/clothes6-2.jpg)" >
@@ -274,7 +274,7 @@
       </div>
     </div>
 
-    <div class="m-productList container-fluid d-md-none">
+    <div class="m-productList container-fluid d-md-none animated">
       <div class="swiper-container mobileProductList">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -366,13 +366,13 @@
       </div>
     </div>
 
-    <div class="container  my-5">
+    <div class="container  my-5 animated">
       <h3 class="h6 fw-light lh-lg mx-auto w-75 text-center text-hover">
         越簡單，越穿得出細節是是我們重要的品牌理念，重視衣服的細節，善待生活的小事。<br>期待 WE AR 讓您的日常豐富而有趣。<br>WE AR 打造極簡日常衣著，中性復古風格、簡約中藏有趣味細節。
       </h3>
     </div>
 
-    <div class="event-banner container-fluid my-4 g-0">
+    <div class="event-banner container-fluid my-4 g-0 animated">
       <div class="bg-cover my-5  position-relative" style="background-image: url(https://images.unsplash.com/photo-1620890186094-1f3caf481295?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1901&q=80);min-height: 30vw;">
         <div class="bg-white bg-md-transparent text-md-light p-4  position-md-absolute" style="top: 10%; left: 5%;">
           <h4 class="display-6">Summer sale 50% off!</h4>
@@ -382,7 +382,7 @@
       </div>
     </div>
 
-    <div class="subscribe container">
+    <div class="subscribe container animated">
       <div class="card mb-3 text-center" >
         <div class="row g-0">
           <div class="col-md-5">
