--- a/signup.html
+++ b/signup.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     />
     <title>WE AR 註冊</title>
+    <link rel="icon" href="images/logo.ico" />
     <link rel="stylesheet" href="css/all.css" />
   </head>
   <body>
