--- a/index.html
+++ b/index.html
@@ -11,56 +11,45 @@
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css' integrity='sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==' crossorigin='anonymous'/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+      integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+      crossorigin="anonymous"
+    />
+    <!-- loading -->
+    <link href="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.css" rel="stylesheet" />
     <title>WE AR</title>
+    <link rel="icon" href="images/logo.ico">
     <link rel="stylesheet" href="css/all.css" />
   </head>
   <body>
     <div class="preheader">
       <div class="preheader container-fluid bg-secondary d-flex justify-content-end">
-        <div class="dropdown  bg-white">
-          <a href="#" class="py-2 px-4 d-block text-dark dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" role="button" aria-expanded="false">購物車(<span>1</span>)</a>
-          <div class="dropdown-menu p-2" style="min-width: 280px;">
+        <div class="dropdown bg-white">
+          <a
+            href="#"
+            class="py-2 px-4 d-block text-dark dropdown-toggle"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            role="button"
+            aria-expanded="false"
+            >購物車(<span id="cartAmount">1</span>)</a
+          >
+          <div class="dropdown-menu p-2" style="min-width: 300px">
             <table class="w-100">
-              <tbody class="table">
-                <tr>
-                  <td class="me-2" style="width: 85px;">
-                    <img class="img-fluid"  src="images/shoppingcart-1.webp">
-                  </td>
-                  <td>
-                    <div>春夏薄罩衫 X1</div>
-                    <div class="py-0">$890</div>
-                  </td>
-                  <td class="align-middle">
-                    <a class="text-primary" href="#" data-bs-toggle="modal" data-bs-target="#removeModal"
-                    data-title="春夏薄罩衫"><i class="fas fa-trash"></i></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="me-2" style="width: 85px;">
-                    <img class="img-fluid"  src="images/products-1.jpg">
-                  </td>
-                  <td>
-                    <div>鵝黃碎花花邊衫 X1</div>
-                    <div class="py-0">$650</div>
-                  </td>
-                  <td class="align-middle">
-                    <a class="text-primary" href="#" data-bs-toggle="modal" data-bs-target="#removeModal"
-                    data-title="鵝黃碎花花邊衫"><i class="fas fa-trash"></i></a>
-                  </td>
-                </tr>
-              </tbody>
-              <tfoot >
-                <tr class="border-top" style="height: 50px;">
+              <tbody class="table" id="cart"></tbody>
+              <tfoot>
+                <tr class="border-top" style="height: 50px">
                   <td class="ps-2">TOTAL</td>
-                  <td colspan="2" class="text-end">$1,540</td>
+                  <td colspan="2" class="text-end" id="cartTotal">$1,540</td>
                 </tr>
               </tfoot>
             </table>
-            
+
             <div class="d-flex mt-3">
               <a href="shoppingcart.html" class="btn btn-primary flex-fill me-1">購物車</a>
-              <a href="checkout.html" class="btn btn-primary flex-fill ms-1" >快速結帳</a>
+              <a href="checkout.html" class="btn btn-primary flex-fill ms-1">快速結帳</a>
             </div>
           </div>
         </div>
@@ -113,7 +102,10 @@
             </div>
           </div>
         </nav>
-        <form class="header-search position-relative position-absolute d-none d-md-block" style="top: 30px; right: 30px">
+        <form
+          class="header-search position-relative position-absolute d-none d-md-block"
+          style="top: 30px; right: 30px"
+        >
           <input class="form-control border-light fw-light" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn position-absolute top-0 end-0 pt-1 pb-0" type="submit">
             <span class="material-icons">search</span>
@@ -402,6 +394,7 @@
       </div>
     </div>
     <!-- main content end -->
+   
     <footer class="mt-5 pt-5 pb-2 bg-secondary">
       <div class="container text-center text-md-start">
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -419,7 +412,7 @@
             <h6 class="h2 mb-4">WE AR</h6>
             <ul class="list-unstyled">
               <li><a href="https://goo.gl/maps/X8JXKrLGx4n8yeUM7">407台中市西屯區台灣大道三段251號</a></li>
-              <li>週一到週五營業  AM9:00 ~ PM8:00</li>
+              <li>週一到週五營業 AM9:00 ~ PM8:00</li>
               <li><a href="tel:+886437022168">04-3702-2168</a></li>
               <li><a href="mailto:service@we_re.example.com">service@we_re.example.com</a></li>
             </ul>
@@ -427,15 +420,19 @@
           <div class="col">
             <h6 class="mb-4">CONTACT</h6>
             <ul class="list-unstyled">
-              <li><a href="#"><i class="fab fa-facebook-square me-2"></i>Facebook</a></li>
-              <li><a href="#"><i class="fab fa-twitter me-2"></i>Twitter</a></li>
-              <li><a href="#"><i class="fab fa-instagram me-2"></i>Instagram</a></li>
+              <li>
+                <a href="#"><i class="fab fa-facebook-square me-2"></i>Facebook</a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter me-2"></i>Twitter</a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram me-2"></i>Instagram</a>
+              </li>
             </ul>
           </div>
         </div>
-        <p class="small text-center mt-5">Copyright © 2021 WANG PEIHSIN  
-          Powered by Bootstrap5
-        </p>
+        <p class="small text-center mt-5">Copyright © 2021 WANG PEIHSIN Powered by Bootstrap5</p>
       </div>
     </footer>
     <!-- remove Modal -->
@@ -451,15 +448,86 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-primary flex-fill me-1" data-bs-dismiss="modal">否</button>
-            <button type="button" class="btn btn-primary flex-fill" >是</button>
+            <button
+              type="button"
+              class="btn btn-primary flex-fill"
+              id="removeBtn"
+              data-bs-target="#checkRemoveModal"
+              data-bs-toggle="modal"
+              data-bs-dismiss="modal"
+            >
+              是
+            </button>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <!-- check remove Modal -->
+    <div class="modal fade" id="checkRemoveModal" tabindex="-1" aria-labelledby="checkRemoveModal" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content border-0">
+          <div class="modal-header text-primary">
+            <h5 class="modal-title">已刪除商品</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>已刪除商品</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary me-1" data-bs-dismiss="modal">確認</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- add to cart Modal -->
+    <div class="modal fade" id="addCartModal" tabindex="-1" aria-labelledby="addCartModal" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content border-0">
+          <div class="modal-header text-primary">
+            <h5 class="modal-title">增加到購物車</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>已增加商品到購物車</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary me-1" data-bs-dismiss="modal">確認</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- plugins cdn start -->
+
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- bootstrap5 -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
+    <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js' integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==' crossorigin='anonymous'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js' integrity='sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==' crossorigin='anonymous'></script>
+    <!-- jquery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
+    <!-- slick -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+      crossorigin="anonymous"
+    ></script>
+    <!-- loading -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.js"></script>
+    <!-- plugins cdn end -->
+
+    <!-- main js -->
     <script src="js/all.js"></script>
   </body>
 </html>
