--- a/layout.html
+++ b/layout.html
@@ -17,8 +17,15 @@
       integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
+    />
+    <!-- loading -->
     <link href="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.css" rel="stylesheet" />
-    <link rel="icon" href="images/logo.ico" />
     <title>WE AR</title>
     <link rel="stylesheet" href="css/all.css" />
   </head>
@@ -112,134 +119,9 @@
         </form>
       </div>
     </header>
-    <!-- main content start -->
-    <div class="container my-4">
-      <div class="row">
-        <!-- sidebar -->
-        <div class="productList-category col-md-3">
-          <ul class="nav flex-column d-none d-md-block">
-            <li class="nav-item">
-              <a href="#" class="nav-link active" data-bs-toggle="tab" data-bs-target="#productList-all">ALL</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-danger" href="#" data-bs-toggle="tab" data-bs-target="#productList-sale">SALE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#productList-new">NEW ARRIVALS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#productList-ranking">RANKING</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#productList-tops">TOPS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#productList-dress">DRESSES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#productList-knitwear">KNITWEAR</a>
-            </li>
-          </ul>
-        </div>
 
-        <div class="productList-cardlist col-md-9">
-          <!-- product list tab -->
-          <div class="tab-content">
-            <div class="tab-pane fade" id="productList-sale">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">SALE</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-sale">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
+    <!-- content -->
 
-            <div class="tab-pane fade show active" id="productList-all">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">ALL</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-all">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="productList-new">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">NEW ARRIVALS</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-new">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="productList-ranking">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">RANKING</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-ranking">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="productList-tops">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">TOPS</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-tops">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="productList-dress">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">DRESS</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-dress">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="productList-knitwear">
-              <nav aria-label="breadcrumb mb-5">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">KNITWEAR</li>
-                </ol>
-              </nav>
-              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5" id="tabpane-knitwear">
-                <!-- loading -->
-                <img class="loading" src="images/loading.gif" alt="loading" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- main content end -->
     <footer class="mt-5 pt-5 pb-2 bg-secondary">
       <div class="container text-center text-md-start">
         <div class="row row-cols-1 row-cols-md-3 g-4">
